plugins {
    id 'org.jetbrains.intellij' version '1.13.3' apply false
}

allprojects {
    group 'com.intellij.plugin'
    version themeDevStudio
    apply plugin: 'java'

    sourceCompatibility = 17
    compileJava.options.encoding = 'UTF-8'
    compileTestJava.options.encoding = 'UTF-8'
    configurations.all {
        resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
    }

    repositories {
        maven { url 'https://www.jetbrains.com/intellij-repository/releases' }
        maven { url 'https://plugins.jetbrains.com/maven' }
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'idea'

    sourceSets {
        main.java.srcDirs 'src/main/java'
        main.resources.srcDirs 'src/main/resources'

        test.java.srcDirs 'src/test/java'
        test.resources.srcDirs 'src/test/resources'
    }

    processResources {
        duplicatesStrategy = DuplicatesStrategy.INCLUDE
    }

    processTestResources {
        duplicatesStrategy = DuplicatesStrategy.INCLUDE
    }

    task sourceJar(type: Jar) {
        archiveClassifier = 'sources'
        from sourceSets.main.allSource
        duplicatesStrategy = DuplicatesStrategy.INCLUDE
    }

    artifacts {
        archives sourceJar
        archives jar
    }

    // IntelliJ Platform packaging applies only to IDE-facing modules. The
    // `lsp` module is a standalone Java application (the LSP server) and must
    // not pull the IntelliJ SDK or trigger an IDE distribution download.
    // `:feature:analysis` is main's native IntelliJ plugin module (core +
    // plugin.*); `:feature:clients:intellij` is the LSP client plugin module.
    // `:feature:core-tests` is a plain Java subproject that runs core unit
    // tests under the default system classloader so JaCoCo records coverage
    // (the PathClassLoader forced by the intellij plugin zeroes JaCoCo data).
    if (project.path != ':feature:lsp' && project.path != ':feature:core-tests') {
        apply plugin: 'org.jetbrains.intellij'

        intellij {
            version = 'IU-2024.1.7'
            downloadSources = true
            updateSinceUntilBuild = false
        }

        tasks.named('initializeIntelliJPlugin').configure {
            onlyIf {false}
        }

        gradle.projectsEvaluated {
            tasks.matching {it.name == 'buildSearchableOptions'}.configureEach {
                onlyIf {false}
            }
            tasks.matching { it.name == 'testClasses' && it.project.plugins.hasPlugin('org.jetbrains.intellij') }.configureEach {
                onlyIf {true}
            }
        }

        patchPluginXml {
            sinceBuild = '241'
            untilBuild = '999.*'
        }
    }

}

tasks.register('ruleCenterValidateDocument', JavaExec) {
    group = 'verification'
    description = 'Extract and validate approved Markdown rule documents for the center workflow'
    dependsOn ':feature:analysis:classes'
    classpath = project(':feature:analysis').sourceSets.main.runtimeClasspath
    mainClass = 'com.huawei.theme.analysis.core.rulecenter.RuleCenterWorkflowMain'
}

tasks.register('ruleCenterPrepareRelease', JavaExec) {
    group = 'verification'
    description = 'Gate and prepare immutable rule package release assets'
    dependsOn ':feature:analysis:classes'
    classpath = project(':feature:analysis').sourceSets.main.runtimeClasspath
    mainClass = 'com.huawei.theme.analysis.core.rulecenter.RuleCenterPublishGateMain'
}

tasks.register('ruleCenterExtractBaseline', JavaExec) {
    group = 'verification'
    description = 'Securely extract and validate the previous approved rule package baseline'
    dependsOn ':feature:analysis:classes'
    classpath = project(':feature:analysis').sourceSets.main.runtimeClasspath
    mainClass = 'com.huawei.theme.analysis.core.rulecenter.RuleCenterBaselineExtractorMain'
}

tasks.register('ruleCenterSelectReleaseBaseline', JavaExec) {
    group = 'verification'
    description = 'Select the highest approved rule release using analyzer version semantics'
    dependsOn ':feature:analysis:classes'
    classpath = project(':feature:analysis').sourceSets.main.runtimeClasspath
    mainClass = 'com.huawei.theme.analysis.core.rulecenter.RuleCenterReleaseBaselineSelectorMain'
}
